--- a/config/avia.yaml
+++ b/config/avia.yaml
@@ -87,3 +87,81 @@
       interval: -1
       # how many LiDAR frames saved in each pcd file;
       # -1 : all frames will be saved in ONE pcd file, may lead to memory crash when having too much frames.
+
+    # 自适应融合配置 / Adaptive Fusion Configuration
+    adaptive_fusion:
+      enabled: true
+      debug_output: false
+      strategy: "HYBRID"  # QUALITY_BASED, CONFIDENCE_BASED, HYBRID, CONSERVATIVE
+      
+      # 时间平滑设置 / Temporal Smoothing Settings
+      temporal_smoothing:
+        enabled: true
+        alpha: 0.8  # 平滑因子 (0.0-1.0)
+      
+      # 异常值检测 / Outlier Detection
+      outlier_detection:
+        enabled: true
+        z_score_threshold: 2.5
+      
+      # 权重约束 / Weight Constraints
+      constraints:
+        min_lidar_weight: 0.1
+        max_lidar_weight: 1.0
+        min_visual_weight: 0.0
+        max_visual_weight: 0.9
+        min_imu_weight: 0.1
+        max_imu_weight: 1.0
+        normalize_weights: true
+
+      # LiDAR质量评估参数 / LiDAR Quality Assessment Parameters
+      lidar_quality:
+        point_density:
+          min_points_per_voxel: 5
+          optimal_points_per_voxel: 20
+          search_radius: 0.5
+        geometric_consistency:
+          normal_angle_threshold: 15.0
+          curvature_threshold: 0.1
+          planarity_threshold: 0.8
+        noise_assessment:
+          max_allowed_noise: 0.05
+          noise_estimation_neighbors: 10
+
+      # 视觉质量评估参数 / Visual Quality Assessment Parameters
+      visual_quality:
+        features:
+          min_feature_count: 50
+          optimal_feature_count: 200
+          feature_distribution_threshold: 0.6
+        image_quality:
+          min_contrast: 20.0
+          optimal_contrast: 80.0
+          motion_blur_threshold: 5.0
+        lighting:
+          min_brightness: 30
+          max_brightness: 220
+          exposure_consistency_threshold: 10
+
+      # IMU质量评估参数 / IMU Quality Assessment Parameters
+      imu_quality:
+        accelerometer:
+          max_bias_drift: 0.1
+          noise_density_threshold: 0.01
+          consistency_window: 100
+        gyroscope:
+          max_bias_drift: 0.01
+          noise_density_threshold: 0.001
+          consistency_window: 100
+        temperature:
+          enabled: true
+          compensation_factor: 0.1
+
+      # 性能调优参数 / Performance Tuning Parameters
+      performance:
+        quality_assessment_hz: 10.0
+        weight_calculation_hz: 10.0
+        history_buffer_size: 100
+        max_processing_time_ms: 50
+        enable_parallel_processing: true
+        num_threads: 2
